rhai/codegen/ui_tests/non_clonable.stderr
error[E0277]: the trait bound `NonClonable: Clone` is not satisfied
  --> ui_tests/non_clonable.rs:11:23
   |
11 | pub fn test_fn(input: NonClonable) -> bool {
   |                       ^^^^^^^^^^^ the trait `Clone` is not implemented for `NonClonable`
   |
note: required by a bound in `rhai::Dynamic::cast`
  --> $WORKSPACE/src/types/dynamic.rs
   |
   |     pub fn cast<T: Any + Clone>(self) -> T {
   |                          ^^^^^ required by this bound in `Dynamic::cast`
help: consider annotating `NonClonable` with `#[derive(Clone)]`
     |
3    + #[derive(Clone)]
4    | struct NonClonable {
     |
